templates/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fib-generator
  namespace: fibonacci
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: fib-generator
